--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -34,17 +34,11 @@
   <script>
   // スムーズスクロール部分の記述
   $(function(){
-    // #で始まるアンカーをクリックした場合に処理
     $('a[href^="#"]').click(function() {
-      // スクロールの速度
-      var speed = 400; // ミリ秒
-      // アンカーの値取得
+      var speed = 400;
       var href= $(this).attr("href");
-      // 移動先を取得
-      var target = $(href == "#" || href == "" ? 'html' : href);
-      // 移動先を数値で取得
+      var target = $(href === "#" || href === "" ? 'html' : href);
       var position = target.offset().top;
-      // スムーススクロール
       $('body,html').animate({scrollTop:position}, speed, 'swing');
       return false;
     });
@@ -54,7 +48,7 @@
   var show_cover_tile = function(){
     $('#title').typist({
       speed: speed_define - 10,
-      text: 'Kenta Iwami',
+      text: 'Kenta Iwami'
     });
     $('#sub_title').typist({
       speed: speed_define - 10,
@@ -62,7 +56,7 @@
     });
   };
 
-  jQuery(function($){
+  jQuery(function(){
   	setTimeout(show_cover_tile, 1000);
   });
 
@@ -76,21 +70,21 @@
     if (flag[0] === false) {
       if (isScrolledIntoView($('#engineer_title')) === true) {
         flag[0] = true;
-        $('#engineer_title').typist({speed: speed_define,text: 'Engineer Works',});
+        $('#engineer_title').typist({speed: speed_define,text: 'Engineer Works'});
       }
     }
 
     if (flag[1] === false) {
       if (isScrolledIntoView($('#photographer_title')) === true) {
         flag[1] = true;
-        $('#photographer_title').typist({speed: speed_define,text: 'Photographer Works',});
+        $('#photographer_title').typist({speed: speed_define,text: 'Photographer Works'});
       }
     }
 
     if (flag[2] === false) {
       if (isScrolledIntoView($('#profile_title')) === true) {
         flag[2] = true;
-        $('#profile_title').typist({speed: speed_define,text: 'Profile',});
+        $('#profile_title').typist({speed: speed_define,text: 'Profile'});
       }
     }
   });
