--- a/portfolio/templates/portfolio/thanks.html
+++ b/portfolio/templates/portfolio/thanks.html
@@ -19,7 +19,7 @@
   jQuery(function($) {
     $('#thanks_title').typist({
       speed: speed_define,
-      text: 'Thanks for your comment.',
+      text: 'Thanks for your comment.'
     });
   });
   </script>
