--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -65,12 +65,12 @@
 
   $(function(){
     $('.content:not(.content:first-of-type)').css('display','none');//一番上の要素以外を非表示
-  	$('.more_content').nextAll('.more_content').css('display','none');//ボタンを非表示
-  	$('.more_content').on('click', function() {
-    	$(this).css('display','none');//押したボタンを非表示
-    	$(this).next('.content').slideDown('fast');
-    	$(this).nextAll('.more_content:first').css('display','block'); //次のボタンを表示
-  	});
+    $('.more_content').nextAll('.more_content').css('display','none');//ボタンを非表示
+    $('.more_content').on('click', function() {
+        $(this).css('display','none');//押したボタンを非表示
+        $(this).next('.content').slideDown('fast');
+        $(this).nextAll('.more_content:first').css('display','block'); //次のボタンを表示
+    });
   });
   </script>
 </head>
@@ -156,6 +156,19 @@
               <a class="link" href="{{ engineer_product.store }}">
                 <div class="box">
                   <div class="link_name">App Store</div>
+                  <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
+                </div>
+              </a>
+            </div>
+          </div>
+          {% endif %}
+
+          {% if policies != 0 %}
+          <div class="col">
+            <div class="console_text_link">
+              <a class="link" href="{% url 'portfolio:privacy_policy' engineer_product.pk %}">
+                <div class="box">
+                  <div class="link_name">Policy</div>
                   <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
                 </div>
               </a>
