index最後のfb,github,contactの表示が崩れていた問題を修正

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -201,7 +201,7 @@
         <div class="console_text">連絡先：kentaiwami12[あっと]gmail.com</div>
 
         <div class="row">
-            <div class="col">
+            <div class="col-md-4">
                 <div class="console_text_link">
               <a class="link" href="https://www.facebook.com/kenta.iwami.5">
                   <div class="box">
@@ -212,7 +212,7 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-md-4">
                 <div class="console_text_link">
                     <a class="link" href="https://github.com/kentaiwami">
                         <div class="box">
@@ -223,7 +223,7 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-md-4">
                 <div class="console_text_link">
                     <a class="link" href="{% url 'portfolio:contact' %}">
                         <div class="box">
