--- a/portfolio/templates/portfolio/privacy_policy.html
+++ b/portfolio/templates/portfolio/privacy_policy.html
@@ -65,6 +65,17 @@
           {% endfor %}
         </ol>
       </div>
+
+      <div class="console_text">更新日：{{latest|date:'Y-m-d'}}</div>
+
+      <div class="console_text_link">
+          <a class="link" href="{% url 'portfolio:contact' %}">
+              <div class="box">
+                  <div class="link_name">Contact</div>
+                  <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
+              </div>
+          </a>
+      </div>
     </div>
   </section>
 
