--- a/portfolio/templates/portfolio/contact.html
+++ b/portfolio/templates/portfolio/contact.html
@@ -8,7 +8,7 @@
   <!--OGP-->
   <meta property="og:title" content="Contact" />
   <meta property="og:type" content="article" />
-  <meta property="og:url" content="http://kentaiwami.jp/portfolio/contact/" />
+  <meta property="og:url" content="http://portfolio.kentaiwami.jp/contact/" />
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:description" content="Contact">
 
